--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Location-Based Tour Guide</string>
+    <string name="app_name">Tourodactyl</string>
     <string name="rating_string">Rating:%1.1f</string>
     <string name="submit_string">Submit</string>
     <string name="title_activity_preview_tour">Tour Name</string>
